# rnote

./: .gitignore  CMakeLists.txt  Imagicon.qrc  LICENSE  Makefile  Makefile.Debug  Makefile.Release  README.md  RNote.pro  RNote.pro.user.a8959fd  install.sh  issues.md  main.cpp  rwindow.cpp  rwindow.h  rwindow.ui  tab.cpp  tab.h  tab.ui  tabData.cpp  tabData.h  tabStack.cpp  tabStack.h  ui_rwindow.h  ui_tab.h  uninstall.sh
Installers/v1.0.0/config/: config.xml
builds/build-debug-linux/: .fuse_hidden00000a1600000014  CMakeCache.txt  Makefile  cmake_install.cmake  rnote  rnote.cbp
builds/build-debug-linux/.cmake/api/v1/reply/: cache-v2-002ac8ac866a1cc06a9b.json  cmakeFiles-v1-b0749f46b6558a7da309.json  cmakeFiles-v1-bf59f0414cee75e6b035.json  codemodel-v2-00d6214b19a0d1296bc3.json  codemodel-v2-04d1bf0687cc6a842d22.json  codemodel-v2-8faeb0a995ec4ef12778.json  index-2022-01-05T05-29-40-0750.json  index-2022-01-05T14-31-07-0464.json  index-2022-01-06T04-30-25-0411.json  target-rnote-Debug-17515316108b0c11f878.json  target-rnote-Debug-2334ebdf8a6c978f0dc5.json  target-rnote-Debug-645840858cfab5b785a5.json  target-rnote_autogen-Debug-6057466315cca8a58259.json
builds/build-debug-linux/rnote_autogen/: moc_predefs.h  mocs_compilation.cpp
builds/build-debug-linux/rnote_autogen/K6S233IZAZ/: moc_keydown.cpp  moc_rwindow.cpp  moc_tab.cpp
builds/build-debug-linux/rnote_autogen/include/: ui_rwindow.h
debug/: moc_rwindow.cpp  moc_tab.cpp  qrc_Imagicon.cpp
forms/: rwindow.ui
headers/: config.h  keydown.h  rwindow.h  tab.h
resources/: registry.qrc
src/: keydown.cpp  main.cpp  rwindow.cpp  tab.cpp
v1.0.0(linux)/: RNote  moc_tab.cpp
v1.0.0_linux/: RNote  RNote.desktop  RNote_resource.rc  moc_rwindow.cpp  uninstall.sh
v1.0.1_linux/: RNote  RNote.desktop  install.sh  moc_rwindow.cpp  qrc_Imagicon.cpp  uninstall.sh
